--- a/app/src/main/res/layout/fragment_favor_box.xml
+++ b/app/src/main/res/layout/fragment_favor_box.xml
@@ -1,45 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:id="@+id/favv_title_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/mainColor"
-        android:gravity="center_vertical"
-        android:paddingBottom="4dp"
-        android:paddingTop="10dp">
-
-        <TextView
-            android:id="@+id/favv_title_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="收藏夹"
-            android:textColor="@color/white" />
-
-        <ImageView
-            android:id="@+id/favv_title_extraicon"
-            android:layout_width="12dp"
-            android:layout_height="19dp"
-            android:layout_marginLeft="2dp"
-            android:layout_toLeftOf="@+id/favv_title_title"
-            android:rotation="90"
-            android:src="@drawable/icon_extra" />
-    </RelativeLayout>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/favv_noweb"
+        android:id="@+id/fav_nologin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/favv_title_layout"
-        android:background="@color/activityBG"
         android:clickable="true"
+        android:focusable="true"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="20dp"
+        android:paddingBottom="33dp"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="92dp"
+            android:padding="6dp"
+            android:src="@drawable/img_nologin" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/main_tip_no_login"
+            android:textSize="13sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/fav_noweb"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingBottom="33dp"
         android:visibility="gone">
 
         <ImageView
@@ -51,20 +49,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="好像没有网络...\n检查一下网络连接？"
+            android:text="@string/main_tip_no_web"
             android:textSize="13sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/favv_nonthing"
+        android:id="@+id/fav_nonthing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/favv_title_layout"
-        android:background="@color/white"
+        android:background="@color/activityBG"
         android:clickable="true"
+        android:focusable="true"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="20dp"
+        android:paddingBottom="33dp"
         android:visibility="gone">
 
         <ImageView
@@ -76,21 +74,24 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="什么都没找到. . ." />
+            android:text="@string/main_tip_no_data" />
 
     </LinearLayout>
 
     <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
-        android:id="@+id/favv_swipe"
+        android:id="@+id/fav_swipe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/favv_title_layout">
+        android:layout_height="match_parent">
 
         <ListView
-            android:id="@+id/favv_listview"
+            android:id="@+id/fav_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@null" />
+            android:clipToPadding="false"
+            android:divider="@color/alpha"
+            android:dividerHeight="1dp"
+            android:paddingBottom="22dp" />
     </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
+
 
 </RelativeLayout>
